[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covid-nz-news"
version = "0.1.0"
description = "Build a local SQLite database of NZ news articles about COVID-19 from Common Crawl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "warcio>=1.7.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "warc_cache/",
    "*.db",
    "*.json",
]
